--- a/CRUD-Operation-with-Axios/src/App.css
+++ b/CRUD-Operation-with-Axios/src/App.css
@@ -1,10 +1,10 @@
 body {
-  background: #17202a;
+  background-color: #17202a;
 }
 
 html {
   font-size: 62.5%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "urbanist";
 }
 
 p,
@@ -21,14 +21,18 @@ button {
   padding: 0.8rem 3.2rem;
   border-radius: 0.3rem;
   cursor: pointer;
-  border: none;
+  border: 0;
   background-color: hsl(160, 80%, 48%);
   box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
-  letter-spacing: .5em;
+  letter-spacing: 1.5px;
   text-transform: uppercase;
   font-size: 15px;
   transition: all 0.5s ease;
   margin-left: 1.2rem;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  -ms-border-radius: 0.3rem;
+  -o-border-radius: 0.3rem;
 }
 
 button:hover {
@@ -36,6 +40,8 @@ button:hover {
   color: hsl(0, 0%, 100%);
   box-shadow: rgb(9, 172, 115) 0px 7px 19px 0px;
 }
+
+/* ================================================ */
 
 .main-section {
   width: 100%;
@@ -50,8 +56,11 @@ button:hover {
   padding: 1.6rem;
   background-color: #212f3d;
   border-radius: 0.6rem;
+  -webkit-border-radius: 0.6rem;
+  -moz-border-radius: 0.6rem;
+  -ms-border-radius: 0.6rem;
+  -o-border-radius: 0.6rem;
   margin: 3.2rem auto;
-
 
   form {
     display: flex;
@@ -61,9 +70,13 @@ button:hover {
   input {
     width: 24rem;
     color: #212f3d;
-    border: 0.1rem solid gray;
+    border: 0.1rem solid grey;
     outline: none;
     border-radius: 0.3rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
     padding: 0.8rem 1.2rem;
   }
 }
@@ -75,23 +88,28 @@ button:hover {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 3.2rem;
-  }
 
-  li {
-    background-color: #212f3c;
-    padding: 1.6rem;
-    border-radius: 0.3rem;
-    list-style-position: inside;
-    border-left: 0.2rem solid #fff;
-  }
+    li {
+      background-color: #212f3c;
+      padding: 1.6rem;
+      border-radius: 0.3rem;
+      -webkit-border-radius: 0.3rem;
+      -moz-border-radius: 0.3rem;
+      -ms-border-radius: 0.3rem;
+      -o-border-radius: 0.3rem;
+      list-style-position: inside;
+      border-left: 0.2rem solid #fff;
+    }
 
-  .btn-delete {
-    background-color: #e74c3c;
-  }
+    .btn-delete {
+      background-color: #e74c3c;
+    }
 
-  .btn-delete:hover {
-    color: hsl(0, 0%, 100%);
-    box-shadow: rgb(167, 54, 13) 0px 7px 19px 0px;
+    .btn-delete:hover {
+      color: hsl(0, 0%, 100%);
+      box-shadow: rgb(167, 54, 13) 0px 7px 19px 0px;
+    }
+
   }
 }
 
